<resources>
    <string name="app_name">Instagram Project</string>

    <string name="network_connection_error">Internet connection lost, please retry again</string>
    <string name="network_default_error">Something wrong happened, please retry again</string>
    <string name="network_internal_error">Our systems got an error, please retry again</string>
    <string name="network_server_not_available">Our services are under maintenance, please retry after some time
    </string>
    <string name="server_connection_error">Not able to connect, please retry again</string>
    <string name="network_login_again">Please log in again</string>


    <!--login-->
    <string name="login_email_field_hint">Enter your email</string>
    <string name="login_password_field_hint">Enter your password</string>
    <string name="login_email_field_empty">Email can\'t be empty</string>
    <string name="login_password_field_empty">Password can\'t be empty</string>
    <string name="login_email_field_invalid">Not a valid email</string>
    <string name="login_password_field_small_length">Password less than 6 digits</string>
    <string name="login_login_button_text">Login</string>
    <string name="login_or_textView_text">OR</string>
    <string name="login_signUp_textView_text">Sign Up with Email</string>

    <!--sign up-->
    <string name="signUp_fullName_field_hint">Enter your full name</string>
    <string name="signUp_email_field_hint">@string/login_email_field_hint</string>
    <string name="signUp_password_field_hint">Choose your password</string>
    <string name="signUp_fullName_field_empty">fullName can\'t be empty </string>
    <string name="signUp_email_field_empty">@string/login_email_field_empty</string>
    <string name="signUp_password_field_empty">@string/login_password_field_empty</string>
    <string name="signUp_email_field_invalid">@string/login_email_field_invalid</string>
    <string name="signUp_password_field_small_length">@string/login_password_field_small_length</string>
    <string name="signUp_button_text">SIGN UP</string>
    <string name="signUp_or_textView_text">@string/login_or_textView_text</string>
    <string name="signUp_login_textView_text">Login with Email</string>

    <!--menu-->
    <string name="menu_home">Home</string>
    <string name="menu_add_photo">Add Photos</string>
    <string name="menu_profile">Profile</string>

    <!--posts-->
    <string name="post_like_label">%1d Likes</string>

    <!--profile-->
    <string name="post_count_label">%d Posts</string>
    <string name="profile_post_label">Posts</string>
    <string name="profile_EditProfile_text">Edit Profile</string>
    <string name="profile_logout_text">Logout</string>
    <string name="editProfile_toolbar_title">Edit Profile</string>
    <string name="editProfile_menuItem_confirm_contentDescription">Confirm</string>
    <string name="editProfile_menuItem_confirm_title">Confirm</string>
    <string name="editProfile_tvChangePhoto_text">Change Photo</string>
    <string name="editProfile_etName_hint">Name</string>
    <string name="editProfile_etBio_hint">Bio</string>
    <string name="editProfile_tvPrivateInformation_text">Private Information</string>
    <string name="editProfile_etEmailAddress_hint">Email Address</string>
    <string name="editProfile_name_empty_error">name can\'t be empty</string>

    <!--photo-->
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="try_again">Please try again</string>

</resources>
