<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:isScrollContainer="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/signUp_logo_imageView"
            android:layout_width="wrap_content"
            android:layout_height="58dp"
            android:layout_marginBottom="42dp"
            app:layout_constraintBottom_toTopOf="@+id/signUp_layout_fullName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/instagram_logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signUp_layout_fullName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/signUp_fullName_field_hint"
            app:boxStrokeColor="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@id/signUp_layout_email"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintStart_toEndOf="@+id/guideline_start">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUp_et_fullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:lines="1"
                android:maxLength="250"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signUp_layout_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/signUp_email_field_hint"
            app:boxStrokeColor="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@id/signUp_layout_password"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintStart_toEndOf="@+id/guideline_start">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUp_et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:maxLength="250"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signUp_layout_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/signUp_password_field_hint"
            app:boxStrokeColor="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@id/signUp_btn_signUp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintStart_toEndOf="@+id/guideline_start"
            tools:layout_editor_absoluteY="656dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUp_et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLength="250"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUp_btn_signUp"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="36dp"
            android:gravity="center"
            android:text="@string/signUp_button_text"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/signUp_tv_or"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/guideline_start" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="@+id/signUp_tv_or"
            app:layout_constraintEnd_toStartOf="@+id/signUp_tv_or"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toTopOf="@+id/signUp_tv_or" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/signUp_tv_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/login_or_textView_text"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/signUp_tv_loginWithEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/signUp_tv_loginWithEmail"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:text="@string/login_signUp_textView_text"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/guideline_start" />

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="@+id/signUp_tv_or"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@+id/signUp_tv_or"
            app:layout_constraintTop_toTopOf="@+id/signUp_tv_or" />

        <ProgressBar
            android:id="@+id/signUp_pb_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="30dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="30dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>