<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/editProfile_toolbar"
            style="@style/ThemeOverlay.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:menu="@menu/toolbar_editprofile_menu"
            app:navigationIcon="@drawable/ic_close"
            app:title="@string/editProfile_toolbar_title"/>
    </com.google.android.material.appbar.AppBarLayout>

    <ProgressBar
        android:id="@+id/editProfile_pb_pageLoading"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:indeterminate="true"
        android:layout_gravity="center"
        />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/editProfile_content_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="true"
        android:fillViewport="true"
        android:layout_marginTop="?attr/actionBarSize">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/editProfile_iv_profile"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/grey_circle_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_profile_placeholder"
                tools:ignore="ContentDescription" />

            <ProgressBar
                android:id="@+id/editProfile_pb_imageLoading"
                style="@style/AppTheme.ProgressBar"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:indeterminate="true"
                android:padding="16dp"
                app:layout_constraintBottom_toBottomOf="@id/editProfile_iv_profile"
                app:layout_constraintEnd_toEndOf="@id/editProfile_iv_profile"
                app:layout_constraintStart_toStartOf="@id/editProfile_iv_profile"
                app:layout_constraintTop_toTopOf="@id/editProfile_iv_profile" />

            <TextView
                android:id="@+id/editProfile_tv_changePhoto"
                style="@style/AppTheme.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:clickable="true"
                android:text="@string/editProfile_tvChangePhoto_text"
                android:textColor="?attr/colorControlNormal"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editProfile_iv_profile" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editProfile_layout_name"
                style="@style/AppTheme.EditProfile.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="30dp"
                android:hint="@string/editProfile_etName_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editProfile_tv_changePhoto">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editProfile_et_name"
                    style="@style/AppTheme.EditProfile.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:lines="1"
                    android:maxLength="100" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editProfile_layout_bio"
                style="@style/AppTheme.EditProfile.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:hint="@string/editProfile_etBio_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editProfile_layout_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editProfile_et_bio"
                    style="@style/AppTheme.EditProfile.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:maxLength="250"
                    android:maxLines="8" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:id="@+id/view_divider"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginTop="16dp"
                android:background="@color/color_divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editProfile_layout_bio" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/editProfile_tv_privateInfo_label"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30sp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="30dp"
                android:text="@string/editProfile_tvPrivateInformation_text"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_divider" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editProfile_layout_email"
                style="@style/AppTheme.EditProfile.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="30dp"
                android:hint="@string/editProfile_etEmailAddress_hint"
                app:hintTextAppearance="@style/AppTheme.Subtitle1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editProfile_tv_privateInfo_label">

                <EditText
                    android:id="@+id/editProfile_et_email"
                    style="@style/AppTheme.EditProfile.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:maxLength="100"
                    android:maxLines="1"
                    android:text="sdfadf" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>